// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Release buildSearchQuery generates a valid query 1`] = `
"{
    hash_abc123: search(query: \\"repo:Andrew/test abc123\\", type: ISSUE, first: 1) {
edges {
  node {
    ... on PullRequest {
      number
      state
      body
      labels(first: 10) {
        edges {
          node {
            name
          }
        }
      }
    }
  }
}
}

    hash_3def78: search(query: \\"repo:Andrew/test 3def78\\", type: ISSUE, first: 1) {
      edges {
        node {
          ... on PullRequest {
            number
            state
            body
            labels(first: 10) {
              edges {
                node {
                  name
                }
              }
            }
          }
        }
      }
    }
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }"
`;

exports[`Release generateReleaseNotes should allow user to configure section headings 1`] = `
"#### 💥  Breaking Change

- First [#1234](https://github.com/web/site/pull/1234) (adam@dierkens.com)

#### 🚀  Enhancement

- Second [#1235](https://github.com/web/site/pull/1235) (adam@dierkens.com)

#### 🐛  Bug Fix

- Fourth [#1237](https://github.com/web/site/pull/1237) (adam@dierkens.com)

#### 🏠  Internal

- Third [#1236](https://github.com/web/site/pull/1236) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should find ignore closed prs 1`] = `
"#### 🐛  Bug Fix

- Doom Patrol enabled  (adam@dierkens.com)
- Autobots roll out!  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should find matching PRs for shas through search 1`] = `
"#### 💥  Breaking Change

- Doom Patrol enabled  (adam@dierkens.com)

#### 🐛  Bug Fix

- Autobots roll out!  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should get extra user data for login 1`] = `
"#### 🐛  Bug Fix

- I have a login attached [#1235](https://github.com/web/site/pull/1235) ([@adierkens](https://github.com/adierkens))

#### Authors: 1

- Adam Dierkens ([@adierkens](https://github.com/adierkens))"
`;

exports[`Release generateReleaseNotes should include PR-less commits 1`] = `
"#### 🚀  Enhancement

- First Feature [#1235](https://github.com/web/site/pull/1235) (adam@dierkens.com)

#### ⚠️  Pushed to master

- I should be included  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should include PRs merged to other PRs 1`] = `
"#### 🐛  Bug Fix

- Doom [#12343](https://github.com/web/site/pull/12343) (adam@dierkens.com)
- Dino [#1235](https://github.com/web/site/pull/1235) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should match commits with related PRs 1`] = `
"#### 🚀  Enhancement

- Feature [#124](https://github.com/web/site/pull/124) (adam@dierkens.com)

#### 🐛  Bug Fix

- I am a commit with a related PR  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should match rebased commits to PRs 1`] = `
"#### 🚀  Enhancement

- Feature [#124](https://github.com/web/site/pull/124) (adam@dierkens.com)
- I was rebased [#123](https://github.com/web/site/pull/123) (adam@dierkens.com)

#### ⚠️  Pushed to master

- I am a commit to master  (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release getCommits should be able to omit by username 1`] = `
Array [
  Object {
    "authorEmail": "lisowski54@gmail.com",
    "authorName": "Andrew Lisowski",
    "authors": Array [
      Object {
        "login": "andrew",
        "name": "Andrew Lisowski",
        "username": "andrew",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
]
`;

exports[`Release getCommits should ignore rebased commits if no last release 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
]
`;

exports[`Release getCommits should match rebased commits to PRs 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "1a2b",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "I was rebased",
  },
]
`;

exports[`Release getCommits should match rebased commits to PRs with first commit 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "hash": "1a2b",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "I was rebased",
  },
]
`;

exports[`Release getCommits should resolve authors with PR commits 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "login": "adam",
        "name": "Adam Dierkens",
        "username": "adam",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": undefined,
    "subject": "First",
  },
  Object {
    "authorEmail": "andrew@users.noreply.github.com",
    "authorName": "Andrew Lisowski",
    "authors": Array [
      Object {
        "login": "andrew",
        "name": "Andrew Lisowski",
        "username": "andrew",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
  Object {
    "authorEmail": "lisowski54@gmail.com",
    "authorName": "Andrew Lisowski",
    "authors": Array [
      Object {
        "email": "lisowski54@gmail.com",
        "name": "Andrew Lisowski",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "login": "adam",
        "name": "Adam Dierkens",
        "username": "adam",
      },
    ],
    "hash": "foo",
    "labels": Array [],
    "packages": undefined,
    "pullRequest": undefined,
    "subject": "Third",
  },
]
`;
